--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,17 @@
 
 /* Estilos generales */
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f1f1f1;
+    font-family: "SUSE", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;  
     display: flex;
+    background-color: #DFF2EB;
     justify-content: center;
     align-items: center;
     height: 100vh;
     padding: 0 20px;
-    background-color: #f5e1e1;
+    background-color: #b5d6e2;
     overflow-x: hidden; /* Evitar desbordamiento horizontal */
 }
 
@@ -32,30 +35,20 @@ body {
     max-width: 500px;  /* Limitar el ancho máximo */
     overflow: hidden;  /* Evitar que el contenido se desborde */
 }
-
-/* Estilo para la cabecera */
-.header {
-    text-align: center;  /* Centra el texto dentro del contenedor */
-    margin-bottom: 20px;
-    width: 100%; /* Asegura que ocupe todo el ancho disponible */
-    height: 100%;  /* Asegura que ocupe todo el alto disponible */
-    display: flex;
-    justify-content: center;  /* Centra el contenido horizontalmente */
-    align-items: center;  /* Centra el contenido verticalmente */
-    background-image: url('https://i.postimg.cc/RZHcdNcH/MIS-XV-A-OS-20241130-134932-0000.png');
-    background-size: contain; /* Ajusta la imagen para que se vea completa dentro del contenedor */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-position: center; /* Centra la imagen en el contenedor */
-    border-radius: 10px; /* Bordes redondeados si es necesario */
-    height: 300px; /* Puedes ajustar esta altura según el tamaño que desees */
+.header{
+   margin-top: 790%;
+   background-color: #fff;
 }
+
 .header img {
-    width: 100%;  /* Hace que la imagen ocupe todo el ancho disponible */
-    height: 200;  /* Ajusta la altura automáticamente para mantener la proporción */
-    object-fit: cover;  /* Asegura que la imagen no se recorte y se vea completa */
-    border-radius: px; /* Bordes redondeados si es necesario */
-    margin-top: 90px;
+    width: 100%; 
+    height: auto;  /* Ajusta la altura automáticamente para mantener la proporción */
+    object-fit: contain;  /* Asegura que la imagen no se recorte y se vea completa */
     border-radius: 15px;
+    background-color: #fff;
+    box-sizing: content-box;
+    display: flex;
+
 }
 /* Estilo para el contenido */
 .content {
@@ -65,7 +58,7 @@ body {
 
 .content h1 {
     font-size: 3.4rem;
-    color: #6d4c41;
+    color: #002041;
     margin-bottom: 10px;
         font-family: "Fleur De Leah", cursive;
         font-weight: 500;
@@ -74,25 +67,26 @@ body {
 
 .content p {
     font-size: 1rem;
-    color: #777;
+    color: #93a1aa;
     margin-bottom: 20px;
 }
 
 /* Estilo para el botón */
 .button {
-    background-color: #c08383;
+    background-color: #e2f1f3;
     border: none;
     padding: 12px 20px;
-    color: #fff;
+    color: #041c35;
     font-size: 1.2rem;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: 0.3s;
     text-decoration: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .button:hover {
-    background-color: #d0a4a4;
+    background-color: #d2edf9;
 }
 
 /* Estilo para el temporizador */
@@ -125,7 +119,7 @@ body {
     align-items: center;
     width: 40px;  /* Tamaño reducido de los círculos */
     height: 40px; /* Tamaño reducido de los círculos */
-    background-color: #daa083;
+    background-color: hwb(199 63% 9%);
     color: white;
     border-radius: 50%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -134,19 +128,276 @@ body {
 
 .time span {
     display: block;
-    font-size: 0.7rem; /* Tamaño de fuente para las etiquetas */
-    color: #473d3d;
-    margin-top: 25px; /* Separación entre el número y la etiqueta */
+    font-size: 0.7rem;
+    place-items: center; /* Tamaño de fuente para las etiquetas */
+    color: #ffffff;
+    margin-top: 55px; /* Separación entre el número y la etiqueta */
 }
-
+.countdown p {
+font-size: 0.7rem;
+margin-top: 20px;
+color: #002041;
+}
 /* Estilo para la sección de la celebración */
 .celebracion {
     margin-top: 20px;
     font-size: 1rem;
-    color: #333;
+    color: #002041;
     text-align: center;
+}
+.celebracion h2 {
+    font-size: 1.5rem;
+    color: #002041;
+    margin-bottom: 15px;
+}
+
+.celebracion p {
+    font-size: 1rem;
+    color: #011a34b9;
+    margin-bottom: 2px;
 }
 
 .celebracion img {
     margin-bottom: 10px;
+    width: 100px;
 }
+.dress-code {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 1rem;
+    color: #ffffff;
+    background-color: #ffffff; /* Color suave de fondo */
+    padding: 15px;
+}
+
+.dress-code h2 {
+    font-size: 1.5rem;
+    color: #002041;
+    margin-bottom: 15px;
+}
+
+.dress-code p {
+    font-size: 1rem;
+    color: #011a34b9;
+    margin-bottom: 2px;
+}
+
+.dress-code img {
+    margin-bottom: 10px;
+    width: 70px;
+    animation: pulse 2.2s infinite;
+}
+    @keyframes pulse {
+        0%, 100% { transform: scale(1); }
+        50% { transform: scale(1.1); }
+    }
+.hashtag {
+    background-color: hwb(199 63% 9%);
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    overflow-x: hidden;
+    border-radius: 15px;
+    margin-bottom: 10px;
+}
+
+.hashtag h2{
+    font-size: 1.5rem;
+    color: #002041;
+    margin-bottom: 15px;
+}
+
+.hashtag p {
+    margin-bottom: 30px;
+    font-size: 1rem;
+    color: #011a34b9;
+}
+
+.hashtag img {
+    margin-top: 40px;
+    margin-bottom: 10px;
+    width: 100px;
+}
+
+.fotos img{
+    width: 80%; 
+    height: auto;  
+    object-fit: cover;
+    margin-top: 13%;
+    background-color: #fff;
+}
+
+.gift img{
+    margin-top: 40px;
+    margin-bottom: 15px;
+    width: 80px;
+}
+.gift h2{
+    font-size: 1.5rem;
+    color: #002041;
+    margin-bottom: 20px;
+}
+.gift p{
+    margin-bottom: 10px;
+    font-size: 1rem;
+    color: #011a34b9;
+}
+
+.hidden {
+    display: none; /* Oculta los datos bancarios por defecto */
+  }
+  
+  button {
+    padding: 10px 40px;
+    background-color: #76b7d5;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 0.8rem;
+    border-radius: 8px;
+    margin-top: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color: #4586c7;
+  }
+  .rsvp-container {
+    text-align: center;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 400px;
+  }
+  
+  .rsvp-container h2 {
+    font-size: 1.5rem;
+    color: #002041;
+    margin-bottom: 10px;
+  }
+
+  .rsvp-container p {
+    margin-bottom: 20px;
+    font-size: 1rem;
+    color: #011a34b9;
+  }
+  
+  /* Estilo general para el contenedor */
+  .attendance {
+    text-align: center;
+    margin: 20px;
+  }
+
+  /* Estilo para el texto superior */
+  .attendance p {
+    font-size: 1rem;
+    color: #011a34b9;
+}
+
+  /* Opciones en línea */
+  .options {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    gap: 40px; /* Espaciado entre opciones */
+  }
+
+  /* Estilo para los labels */
+  .options label {
+    font-size: 16px;
+    display: flex;
+    align-items: center; /* Centra verticalmente */
+    gap: 5px; /* Espaciado entre el botón y el texto */
+    cursor: pointer; /* Cambia el cursor al pasar por encima */
+  }
+
+  /* Estilo para los botones de radio */
+  .options input[type="radio"] {
+    transform: scale(1.2); /* Agranda el botón */
+  }
+
+  
+  input[type="radio"] {
+    margin-right: auto;
+    cursor: pointer;
+    accent-color: #708cb4;
+  }
+  
+  label {
+    cursor: pointer;
+  }
+  
+  .submit-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #64abdd;
+    color: white;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .submit-button:hover {
+    background-color: #4586c7;
+  }
+  
+  label {
+    font-size: 0.8rem;
+  }
+
+  .fin img {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    width: 250px;
+  }
+  /* Contenedor principal */
+.form-container {
+    display: flex;
+    flex-direction: column; /* Coloca los elementos en una columna */
+    gap: 10px; /* Espaciado entre los contenedores */
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto; /* Centra horizontalmente */
+    margin-top: 20px;
+  }
+  
+  /* Estilo general para los contenedores */
+  .input-container {
+    width: 100%;
+  }
+  
+  /* Estilo para el input de texto */
+  input[type="text"], 
+  textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc; /* Bordes claros */
+    border-radius: 5px; /* Bordes redondeados */
+    outline: none; /* Quita el contorno al hacer clic */
+    transition: border-color 0.3s; /* Transición suave */
+    font-family: "SUSE", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  /* Cambios al enfocarse */
+  input[type="text"]:focus, 
+  textarea:focus {
+    border-color: #5598cf; /* Cambia el color del borde al enfocarse */
+  }
+
+  input::placeholder, 
+  textarea::placeholder {
+    color: #aaaaaa; 
+  }
+  textarea {
+    resize: none; /* Bloquea la opción de redimensionar */
+    font-family: "SUSE", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 500;
+  }
